--- a/css/estilos.css
+++ b/css/estilos.css
@@ -71,24 +71,25 @@ main .produ h2{
     
 }
 
-main .produ .contenedor-cards{
+main .produ .produ__cards{
     display: flex;
     align-items: center;
     flex-wrap: wrap;
     justify-content: space-around;
+    
 }
 
 
 
 
 
-main .mas .massobrenosotros{
+main .mas .mas__nosotros{
     font-family: 'Bebas Neue', sans-serif;
     width: 100%;
     height: 30vh;
     
 }
-main .mas .massobrenosotros h2{
+main .mas .mas__nosotros h2{
     font-family: 'Bebas Neue', sans-serif;
     font-size: 40px;
     text-align: center;
@@ -96,14 +97,14 @@ main .mas .massobrenosotros h2{
     padding: 15px;
     
 }
-main .mas .massobrenosotros p{
+main .mas .mas__nosotros p{
     text-align: center;
     font-size: 30px;
 }
 
 /**************GRID*****************/
 
-.grid-container{
+.mas__grid{
     width: 100%;
     height: 80vh;
     display: grid;
@@ -113,7 +114,7 @@ main .mas .massobrenosotros p{
     background-color: white;
 }
 
-.grid-container .grid-item img{
+.mas__grid .grid-item img{
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -144,25 +145,30 @@ main .mas .massobrenosotros p{
 /*****************FOOTER***************/
 
 footer{
-    height: 20vh;
+    height: 50vh;
     display: flex;
     width: 100%;
-    border-top: 2px solid #401712;
-    background-color: #191716;
+    background-color: #363635;
     color: aliceblue;
 }
 
-footer .logo{
+footer .footer__logo{
     display: flex;
     justify-content: center;
     align-items: center;
     padding-top: 10px;
 }
-footer .logo img{
+footer .footer__logo img{
     width: 100px;
 }
 
-footer .container-footer ul{
+footer .footer__container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+footer .footer__container ul{
     list-style: none;
     display: flex;
     flex-direction: column;
@@ -170,18 +176,20 @@ footer .container-footer ul{
     padding-top: 40px;
     
 }
-footer .container-footer ul li{
+footer .footer__container ul li{
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
     font-family: 'Bebas Neue', sans-serif;
+    padding: 15px;
 }
 footer div{
     width: 33.3%;
     height: 100%;
+    
 }
-footer .contenedorlogos{
+footer .footer__logos{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -190,7 +198,7 @@ footer .contenedorlogos{
     
 }
 
-footer .contenedorlogos img{
+footer .footer__logos img{
     margin: 10px;
 }
 
@@ -302,10 +310,7 @@ footer .contenedorlogos img{
 
 /********************PAGE CONTACTO FORMULARIO*************/
 
-.main-contacto{
-    background-color: beige;
-}
-.formulario{
+.contacto .contacto__formulario{
     width: 100%;
     height: 50vh;
     font-family: 'Bebas Neue', sans-serif;
@@ -316,7 +321,7 @@ footer .contenedorlogos img{
     padding: 30px;
     }
 
-    .formulario input{
+    .contacto__formulario input{
         font-size: 30px;
         margin: 10px;
 
@@ -341,10 +346,10 @@ footer .contenedorlogos img{
 
 }
 
-.tienda .tienda-titulo{
+.tienda .tienda__titulo{
     width: 100%;
 }
-.tienda .tienda-titulo h2{
+.tienda .tienda__titulo h2{
     font-size: 60px;
     font-family: 'Bebas Neue', sans-serif;
     color: black;
@@ -353,20 +358,20 @@ footer .contenedorlogos img{
     
 
 }
-.tienda .tienda-titulo h3{
+.tienda .tienda__titulo h3{
     font-size: 30px;
     font-family: 'Bebas Neue', sans-serif;
     color: red;
     padding-left: 15px;
 }
 
-.tienda .tienda-titulo h4{
+.tienda .tienda__titulo h4{
     font-family: 'Bebas Neue', sans-serif;
     font-size: 20px;
     padding-left: 15px;
 }
 
-.tienda .lista-imagen{
+.tienda .tienda__lista{
     width: 100%;
     height: 50vh;
     display: flex;
@@ -374,7 +379,7 @@ footer .contenedorlogos img{
     align-items: center;
 
 }
-.tienda .lista-imagen ul{
+.tienda .tienda__lista ul{
     width: 50%;
     height: 40vh;
     display: flex;
@@ -387,7 +392,7 @@ footer .contenedorlogos img{
     
     
 }
-.tienda .lista-imagen ul li{
+.tienda .tienda__lista ul li{
     text-decoration: none;
     font-size: 20px;
     font-family: 'Bebas Neue', sans-serif;
@@ -395,7 +400,7 @@ footer .contenedorlogos img{
     
 
 }
-.tienda .lista-imagen img{
+.tienda .tienda__lista img{
     width: 50%;
     height: 80%;
     object-fit: cover;
@@ -403,7 +408,7 @@ footer .contenedorlogos img{
 }
 
 
-.tienda .lista-imagen-2{
+.tienda .tienda__lista-2{
     width: 100%;
     height: 50vh;
     display: flex;
@@ -413,7 +418,7 @@ footer .contenedorlogos img{
 
 }
 
-.tienda .lista-imagen-2 ul{
+.tienda .tienda__lista-2 ul{
     width: 50%;
     height: 40vh;
     display: flex;
@@ -425,13 +430,19 @@ footer .contenedorlogos img{
     margin: 10px;
     
 }
-.tienda .lista-imagen-2 img{
+.tienda .tienda__lista img{
     width: 50%;
     height: 80%;
     object-fit: cover;
 
 }
-.tienda .lista-imagen-2 ul li{
+.tienda .tienda__lista-2 img{
+    width: 50%;
+    height: 80%;
+    object-fit:cover;
+
+}
+.tienda .tienda__lista-2 ul li{
     margin: 15px;
     text-decoration: none;
     text-align: left;
@@ -479,7 +490,7 @@ footer .contenedorlogos img{
     width: 100%;
     height: 80vh;
 }
-.cont-cards{
+.panes-cards .panes-cards__contenedor{
     display: flex;
     justify-content: space-between;
     align-items: right;
@@ -523,11 +534,11 @@ footer .contenedorlogos img{
 
 @media screen and (max-width:700px){
         
-    footer .contenedorlogos{
+    footer .footer__logos{
             flex-direction: column;
             
         }
-        footer .contenedorlogos img{
+        footer .footer__logos img{
             margin: 3px;
         }
         
@@ -540,7 +551,7 @@ footer .contenedorlogos img{
         font-size: 40px;
         padding-top: 10px;
     }
-    main .mas .massobrenosotros h2{
+    main .mas .mas__nosotros h2{
         font-size: 40px;
         padding-top: 10px;
     }
@@ -549,14 +560,14 @@ footer .contenedorlogos img{
         font-size: 40px;
     }
 
-    .tienda .lista-imagen-2 ul li{
+    .tienda .tienda__lista-2 ul li{
         margin: 0;
 
     }
 }
 
 @media screen and (max-width: 550px) {
-    .tienda .lista-imagen{
+    .tienda .tienda__lista{
         flex-direction: column;
         align-items: center;
         height: 70vh;
@@ -564,30 +575,30 @@ footer .contenedorlogos img{
         justify-content: center;
     }
 
-    .tienda .lista-imagen-2{
+    .tienda .tienda__lista-2{
         flex-direction: column;
         height: 70vh;
         align-items: center;
     }
-    .tienda .lista-imagen-2 img{
+    .tienda .tienda__lista-2 img{
         height: 40vh;
         padding-left: 0px;
         width: 80%;
     }
-    .tienda .lista-imagen img{
+    .tienda .tienda__lista img{
         padding-left: 0;
         height: 40vh;
         width: 80%;
     }   
 
-    .tienda .lista-imagen ul{
+    .tienda .tienda__lista ul{
         width: 80%;
     }
-    .tienda .lista-imagen-2 ul{
+    .tienda .tienda__lista-2 ul{
         width: 80%;
     }
     
-    .tienda .lista-imagen ul li{
+    .tienda .tienda__lista ul li{
         margin: 0;
         padding: 0;
     }
@@ -598,53 +609,53 @@ footer .contenedorlogos img{
 
   
 @media screen and (max-width:450px){
-        footer .logo img{
+        footer .footer__logo img{
             width: 70px;
         }
 
 
-        footer .container-footer ul{
+        footer .footer__container ul{
             padding-top: 15px;
             display: flex;
             justify-content: center;
             align-items: center;
         }
-        footer .container-footer ul li{
+        footer .footer__container ul li{
             font-size: 15px;
             text-align: center;
             
             
         }
 
-        footer .contenedorlogos img{
+        footer .footer__logos img{
             width: 35px;
         }
 
-        .tienda .lista-imagen ul li{
+        .tienda .tienda__lista ul li{
             font-size: 15px;
             padding-top: 20px;
 
         }
 
-        .tienda .lista-imagen-2 ul li{
+        .tienda .tienda__lista-2 ul li{
             font-size: 15px;
             padding-top: 20px;
         }
 
-        .tienda .lista-imagen ul{
+        .tienda .tienda__lista ul{
             width: 80%;
             
         }
 
-        .tienda .lista-imagen img{
+        .tienda .tienda__lista img{
             width: 80%;
         }
 
-        .tienda .lista-imagen-2 ul{
+        .tienda .tienda__lista-2 ul{
             width: 80%;
         }
 
-        .tienda .lista-imagen-2 img{
+        .tienda .tienda__lista-2 img{
             width: 80%;
         }
     }
