--- a/css/estilos.css
+++ b/css/estilos.css
@@ -682,6 +682,14 @@ footer .footer__logos img{
             padding-top: 20px;
 
         }
+        .tienda .tienda__lista{
+            margin: 10px;
+            padding: 10px;
+        }
+        .tienda .tienda__lista-2{
+            margin: 10px;
+            padding: 10px;
+        }
 
         .tienda .tienda__lista-2 ul li{
             font-size: 15px;
