--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,15 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Caprasimo&family=Oswald:wght@400;600&display=swap");
+.titulo, .produ .produ__cards, .nosotros div, .nosotros-2 div, .trabaja-nosotros, .panes, .panes-dos, footer .footer__logo, footer .footer__iframe {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
+.titulo, .trabaja-nosotros, .panes, .panes-dos {
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat; }
+
 * {
   margin: 0%;
   padding: 0%;
@@ -25,14 +35,8 @@
   width: 100%;
   height: 80vh;
   background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../img/ñoquipanceta.jpg);
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
   background-attachment: fixed;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center; }
+  flex-direction: column; }
   .titulo h1 {
     font-family: 'Bebas Neue', sans-serif;
     font-size: 100px;
@@ -53,8 +57,6 @@
   padding: 15px; }
 
 .produ .produ__cards {
-  display: flex;
-  align-items: center;
   flex-wrap: wrap;
   justify-content: space-around;
   margin: 15px; }
@@ -73,6 +75,27 @@
     text-align: center;
     font-size: 30px; }
 
+.mas .mas__grid {
+  width: 100%;
+  height: 80vh;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-auto-rows: 150px;
+  gap: 15px;
+  background-color: white;
+  padding: 10px; }
+  .mas .mas__grid .grid-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    box-shadow: 0px 0px 86px -13px rgba(0, 0, 0, 0.1), 0px 0px 26px 26px rgba(0, 0, 0, 0.1); }
+  .mas .mas__grid .primer-item {
+    grid-row: span 2; }
+  .mas .mas__grid .tercer-item {
+    grid-row: span 2; }
+  .mas .mas__grid .cuarto-item {
+    grid-row: span 2; }
+
 /*************NOSOTROS*************/
 .nosotros {
   display: flex;
@@ -80,10 +103,7 @@
   height: 50vh;
   padding: 10px; }
   .nosotros div {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; }
+    flex-direction: column; }
     .nosotros div h1 {
       font-family: 'Bebas Neue', sans-serif;
       font-size: 40px;
@@ -105,10 +125,7 @@
   display: flex;
   flex-direction: row-reverse; }
   .nosotros-2 div {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; }
+    flex-direction: column; }
     .nosotros-2 div h2 {
       font-family: 'Bebas Neue', sans-serif;
       font-size: 40px;
@@ -127,12 +144,6 @@
   width: 100%;
   height: 80vh;
   background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../img/capeletinis.jpg);
-  background-position: center center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: column; }
   .trabaja-nosotros h2 {
     font-family: 'Bebas Neue', sans-serif;
@@ -173,14 +184,8 @@
 /*************PANES*********/
 .panes {
   background-image: url(../img/focachafondo.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
   width: 100%;
   height: 80vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: column; }
   .panes h1 {
     font-family: 'Bebas Neue', sans-serif;
@@ -207,13 +212,7 @@
 .panes-dos {
   width: 100%;
   height: 80vh;
-  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../img/pizza.jpg);
-  background-position: center center;
-  background-size: cover;
-  background-repeat: no repeat;
-  display: flex;
-  align-items: center;
-  justify-content: center; }
+  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../img/pizza.jpg); }
   .panes-dos h2 {
     font-family: 'Bebas Neue', sans-serif;
     font-size: 100px;
@@ -225,39 +224,29 @@ footer {
   align-items: center;
   display: flex;
   height: 50vh;
-  display: flex;
   width: 100%;
-  background-color: #363635;
-  color: aliceblue; }
+  background-color: #fff1f1;
+  color: black; }
   footer .footer__logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 10p; }
+    height: 100%; }
     footer .footer__logo img {
-      width: 100px; }
+      width: 150px; }
   footer .footer__container {
-    display: flex;
-    align-items: center;
-    justify-content: center; }
-    footer .footer__container ul {
-      list-style: none;
-      display: flex;
-      flex-direction: column;
-      text-align: start;
-      padding-top: 40px; }
-      footer .footer__container ul li {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        font-family: 'Bebas Neue', sans-serif;
-        padding: 15px; }
-  footer .footer__logos {
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 30px;
-    flex-direction: row; }
-    footer .footer__logos img {
+    flex-direction: column; }
+    footer .footer__container ul {
+      list-style: none; }
+      footer .footer__container ul li {
+        margin: 5px;
+        text-decoration: underline;
+        font-size: 20px;
+        color: #060606; }
+    footer .footer__container .footer__logos {
+      padding-right: 30px;
       margin: 10px; }
+      footer .footer__container .footer__logos img {
+        margin: 20px;
+        width: 50px; }
