--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,6 +1,6 @@
 $color-primario: black;
 $color-secundario: white;
-$color-terciario: beige;
+$color-terciario: tomato;
 
 %flex{
     display: flex;
@@ -13,3 +13,4 @@ $color-terciario: beige;
     background-size: cover;
     background-repeat: no-repeat;
 }
+
