--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Caprasimo&family=Oswald:wght@400;600&display=swap");
-.titulo, .produ .produ__cards, .nosotros div, .nosotros-2 div, .trabaja-nosotros, .panes, .panes-dos, footer .footer__logo, footer .footer__iframe {
+.titulo, .produ .produ__cards, .nosotros div, .nosotros-2 div, .trabaja-nosotros, .panes, .panes-dos, .tienda, footer .footer__logo, footer .footer__container, footer .footer__iframe iframe {
   display: flex;
   justify-content: center;
   align-items: center; }
@@ -13,7 +13,8 @@
 * {
   margin: 0%;
   padding: 0%;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  font-family: 'Bebas Neue', sans-serif; }
 
 .fixed {
   position: fixed;
@@ -54,7 +55,8 @@
   font-size: 40px;
   text-align: center;
   margin: 20px;
-  padding: 15px; }
+  padding: 15px;
+  color: tomato; }
 
 .produ .produ__cards {
   flex-wrap: wrap;
@@ -100,14 +102,16 @@
 .nosotros {
   display: flex;
   width: 100%;
-  height: 50vh;
-  padding: 10px; }
+  height: 50vh; }
   .nosotros div {
+    width: 100% margin 10px;
+    padding: 10px;
     flex-direction: column; }
     .nosotros div h1 {
       font-family: 'Bebas Neue', sans-serif;
       font-size: 40px;
-      text-align: center; }
+      text-align: center;
+      color: tomato; }
     .nosotros div p {
       margin: 10px;
       margin: 10px;
@@ -121,7 +125,6 @@
 .nosotros-2 {
   width: 100%;
   height: 50vh;
-  padding: 10px;
   display: flex;
   flex-direction: row-reverse; }
   .nosotros-2 div {
@@ -129,7 +132,8 @@
     .nosotros-2 div h2 {
       font-family: 'Bebas Neue', sans-serif;
       font-size: 40px;
-      text-align: center; }
+      text-align: center;
+      color: tomato; }
     .nosotros-2 div p {
       margin: 10px;
       padding: 10px;
@@ -157,29 +161,44 @@
     text-align: center; }
 
 /************CONTACTO*********/
-.contacto .contacto__formulario {
-  width: 100%;
-  height: 70vh;
-  font-family: 'Bebas Neue', sans-serif;
-  text-align: center;
-  background-color: white;
-  color: #401712;
-  font-size: 30px;
-  padding: 30px; }
-  .contacto .contacto__formulario input {
+.contacto {
+  background-color: tomato; }
+  .contacto .contacto__formulario {
+    background-color: #fa8a76;
+    width: 100%;
+    height: 70vh;
+    font-family: 'Bebas Neue', sans-serif;
+    text-align: center;
+    color: #401712;
     font-size: 30px;
-    padding: 5px 15px;
-    margin: 9px; }
-
-.contacto .slider-contacto {
-  width: 100%;
-  height: 50vh;
-  background-image: url(../img/canelotis.jpg);
-  background-position: center center;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-size: cover;
-  padding: 20px; }
+    padding: 30px; }
+    .contacto .contacto__formulario input {
+      font-size: 30px;
+      padding: 5px 15px;
+      margin: 9px; }
+  .contacto .slider-contacto {
+    width: 100%;
+    height: 30vh;
+    background-image: url(../img/canelotis.jpg);
+    background-position: center center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover; }
+  .contacto .galeria {
+    display: flex;
+    align-items: center;
+    justify-content: space-around; }
+    .contacto .galeria div {
+      margin: 20px; }
+      .contacto .galeria div img {
+        width: 400px;
+        height: 400px;
+        border-radius: 10px 10px 10px;
+        object-fit: cover; }
+    .contacto .galeria .galeria__logo img {
+      width: 200px;
+      height: 200px;
+      object-fit: cover; }
 
 /*************PANES*********/
 .panes {
@@ -219,6 +238,53 @@
     color: beige;
     text-align: center; }
 
+/***********TIENDA**************/
+.tienda {
+  width: 100%;
+  height: 20vh;
+  flex-direction: column; }
+  .tienda h1 {
+    font-family: 'Bebas Neue', sans-serif;
+    font-size: 50px; }
+  .tienda h2 {
+    font-family: 'Bebas Neue', sans-serif;
+    font-size: 50px;
+    color: tomato; }
+
+.sorrentinos .sorrentinos__sorrentino {
+  flex-wrap: wrap;
+  display: flex;
+  justify-content: space-around;
+  align-items: center; }
+
+.ravioles {
+  display: flex;
+  flex-direction: column; }
+  .ravioles h2 {
+    font-family: 'Bebas Neue', sans-serif;
+    font-size: 50px;
+    color: tomato;
+    text-align: center;
+    padding: 10px; }
+  .ravioles .ravioles__raviol {
+    display: flex;
+    justify-content: space-around;
+    padding: 10px;
+    flex-wrap: wrap; }
+
+.nioquis h3 {
+  font-family: 'Bebas Neue', sans-serif;
+  font-size: 50px;
+  color: tomato;
+  text-align: center;
+  padding: 10px; }
+
+.nioquis .nioquis__nioqui {
+  display: flex;
+  justify-content: space-around;
+  padding: 10px;
+  flex-wrap: wrap; }
+
 footer {
   justify-content: space-around;
   align-items: center;
@@ -233,20 +299,115 @@ footer {
       width: 150px; }
   footer .footer__container {
     height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column; }
     footer .footer__container ul {
       list-style: none; }
       footer .footer__container ul li {
-        margin: 5px;
+        margin: 8px;
         text-decoration: underline;
         font-size: 20px;
-        color: #060606; }
+        color: #060606;
+        padding-bottom: 10px; }
     footer .footer__container .footer__logos {
       padding-right: 30px;
       margin: 10px; }
       footer .footer__container .footer__logos img {
         margin: 20px;
         width: 50px; }
+  footer .footer__iframe iframe {
+    width: 400px; }
+
+@media screen and (max-width: 1050px) {
+  .contacto .galeria div img {
+    width: 300px;
+    height: 300px; }
+  footer .footer__iframe iframe {
+    width: 200px; } }
+
+@media screen and (max-width: 920px) {
+  .nosotros img {
+    width: 400px;
+    height: 350px; }
+  .nosotros-2 img {
+    width: 400px;
+    height: 350px; }
+  .contacto .galeria {
+    flex-direction: column; } }
+
+@media screen and (max-width: 750px) {
+  .mas {
+    margin: 30px;
+    padding-bottom: 20px; }
+    .mas .mas__grid {
+      grid-template-columns: 1fr 1fr;
+      grid-auto-rows: 120px; }
+    .mas .quinto-item {
+      grid-column: span 2; }
+  .nosotros {
+    height: 70vh;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; }
+    .nosotros img {
+      width: 70%; }
+  .nosotros-2 {
+    flex-direction: column;
+    height: 70vh;
+    justify-content: center;
+    align-items: center; }
+    .nosotros-2 img {
+      padding: 0; }
+  .trabaja-nosotros h2 {
+    margin: 10px;
+    font-size: 70px; }
+  .trabaja-nosotros p {
+    margin: 10px; }
+  footer {
+    height: 50vh; }
+    footer .footer__container ul {
+      padding-top: 30px;
+      margin-top: 8px; }
+      footer .footer__container ul li {
+        margin: 4px; }
+    footer .footer__container .footer__logos img {
+      margin: 0; } }
+
+@media screen and (max-width: 650px) {
+  .nosotros {
+    height: 70vh; }
+    .nosotros img {
+      width: 350px;
+      height: 300px; }
+  .nosotros-2 {
+    height: 70vh; }
+    .nosotros-2 img {
+      width: 350px;
+      height: 300px; }
+  .trabaja-nosotros h2 {
+    font-size: 50px; }
+  .trabaja-nosotros p {
+    font-size: 30px; }
+  .panes h1 {
+    font-size: 60px; }
+  .panes h2 {
+    font-size: 50px; }
+  .panes-dos h2 {
+    font-size: 60px; }
+  footer .footer__iframe iframe {
+    display: none; }
+  footer .footer__logos img {
+    padding: 5px; } }
+
+@media screen and (max-width: 470px) {
+  .mas .mas__grid {
+    grid-template-columns: 1fr; }
+  .nosotros {
+    height: 80vh; }
+    .nosotros img {
+      width: 300px;
+      height: 250px; }
+  .nosotros-2 {
+    height: 80vh; }
+    .nosotros-2 img {
+      width: 300px;
+      height: 250px; } }
