--- a/scss/base/_generales.scss
+++ b/scss/base/_generales.scss
@@ -3,8 +3,10 @@
 *{  
     margin: 0%;
     padding: 0%;
-    box-sizing: border-box;                            
+    box-sizing: border-box;    
+    font-family: 'Bebas Neue', sans-serif;                        
 }
+
 
 .fixed{
     position: fixed;
