--- a/scss/components/_layout.scss
+++ b/scss/components/_layout.scss
@@ -39,6 +39,7 @@
         text-align: center;
         margin: 20px;
         padding: 15px;
+        color: $color-terciario;
     }
     .produ__cards{
         @extend %flex;
@@ -105,14 +106,19 @@
     display: flex;
     width: 100%;
     height: 50vh;
-    padding: 10px;
+    
+    
     div{
+        width: 100%
+        margin 10px;
+        padding: 10px;
         flex-direction: column;
         @extend %flex;
         h1{
             font-family: 'Bebas Neue', sans-serif;
             font-size: 40px;
             text-align: center;
+            color: $color-terciario;
 
         }
         p{
@@ -132,7 +138,8 @@
 .nosotros-2{
     width: 100%;
     height: 50vh;
-    padding: 10px;
+    
+    
     display: flex;
     flex-direction: row-reverse;
     div{
@@ -142,6 +149,7 @@
             font-family: 'Bebas Neue', sans-serif;
             font-size: 40px;
             text-align: center;
+            color: $color-terciario;
 
 
         }
@@ -192,12 +200,14 @@
 /************CONTACTO*********/
 
 .contacto{
+    background-color: tomato;
     .contacto__formulario{
+        background-color: rgb(250, 138, 118);
         width: 100%;
         height: 70vh;
         font-family: 'Bebas Neue', sans-serif;
         text-align: center;
-        background-color: white;
+        
         color: #401712;
         font-size: 30px;
         padding: 30px;
@@ -209,16 +219,40 @@
     }
     .slider-contacto{
         width: 100%;
-        height: 50vh;
+        height: 30vh;
         background-image: url(../img/canelotis.jpg);
         background-position: center center;
         background-attachment: fixed;
         background-repeat: no-repeat;
         background-size: cover;
-        padding: 20px;
+        
+    }
+    .galeria{
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        div{
+            
+            margin: 20px;
+            img{
+                width: 400px;
+                height: 400px;
+                border-radius: 10px 10px 10px;
+                object-fit: cover;
+            }
+            
+        }
+        .galeria__logo{
+            img{
+                width: 200px;
+                height: 200px;
+                object-fit: cover;
+            }
+        }
     }
         
 }
+
 
 /*************PANES*********/
 
@@ -279,3 +313,79 @@
 
     }
 }
+
+
+/***********TIENDA**************/
+
+.tienda{
+    width: 100%;
+    height: 20vh;
+    @extend %flex;
+    flex-direction: column;
+    h1{
+        font-family: 'Bebas Neue', sans-serif;
+        font-size: 50px;
+        
+
+    }
+    h2{
+        font-family: 'Bebas Neue', sans-serif;
+        font-size: 50px;
+        color: tomato;
+    }
+
+}
+.sorrentinos{
+    .sorrentinos__sorrentino{
+        flex-wrap: wrap;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+    
+    
+}
+
+.ravioles{
+    display: flex;
+    flex-direction: column;
+    
+    h2{
+        font-family: 'Bebas Neue', sans-serif;
+        font-size: 50px;
+        color: tomato;
+        text-align: center;
+        padding: 10px;
+        
+    }
+    .ravioles__raviol{
+        display: flex;
+        justify-content: space-around;
+        padding: 10px;
+        flex-wrap: wrap;
+        
+    }
+
+    }
+
+    .nioquis{
+        h3{
+            font-family: 'Bebas Neue', sans-serif;
+            font-size: 50px;
+            color: tomato;
+            text-align: center;
+            padding: 10px;
+
+        }
+        .nioquis__nioqui{
+            display: flex;
+            justify-content: space-around;
+            padding: 10px;
+            flex-wrap: wrap;
+        }
+    }
+
+
+
+
+
