--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Caprasimo&family=Oswald:wght@400;600&display=swap");
-.titulo, .produ .produ__cards, .nosotros div, .nosotros-2 div, .trabaja-nosotros, .panes, .panes-dos, .tienda, footer .footer__logo, footer .footer__container, footer .footer__iframe iframe {
+.titulo, .produ .produ__cards, .nosotros div, .nosotros-2 div, .trabaja-nosotros, .contacto .contacto__formulario, .panes, .panes-dos, .tienda, footer .footer__logo, footer .footer__container, footer .footer__iframe iframe {
   display: flex;
   justify-content: center;
   align-items: center; }
@@ -162,20 +162,26 @@
 
 /************CONTACTO*********/
 .contacto {
-  background-color: tomato; }
+  background-color: beige; }
   .contacto .contacto__formulario {
-    background-color: #fa8a76;
+    flex-direction: column;
     width: 100%;
     height: 70vh;
     font-family: 'Bebas Neue', sans-serif;
     text-align: center;
     color: #401712;
-    font-size: 30px;
-    padding: 30px; }
+    font-size: 30px; }
+    .contacto .contacto__formulario h2 {
+      font-size: 50px; }
     .contacto .contacto__formulario input {
       font-size: 30px;
       padding: 5px 15px;
-      margin: 9px; }
+      margin: 9px;
+      transition: 1s; }
+    .contacto .contacto__formulario input:hover {
+      background-color: tomato;
+      color: beige;
+      border: 2px solid white; }
   .contacto .slider-contacto {
     width: 100%;
     height: 30vh;
@@ -400,7 +406,8 @@ footer {
 
 @media screen and (max-width: 470px) {
   .mas .mas__grid {
-    grid-template-columns: 1fr; }
+    grid-template-columns: 1fr;
+    grid-auto-rows: 120px; }
   .nosotros {
     height: 80vh; }
     .nosotros img {
