--- a/scss/base/_mediaquery.scss
+++ b/scss/base/_mediaquery.scss
@@ -48,6 +48,10 @@
 
 
 @media screen and (max-width: 750px) {
+    .titulo{
+
+        background-attachment:local;
+    }
 
     .mas{
         margin: 30px;
