--- a/css/estilos.css
+++ b/css/estilos.css
@@ -120,6 +120,7 @@
       font-family: 'Bebas Neue', sans-serif;
       font-size: 30px; }
   .nosotros img {
+    margin: 10px;
     width: 500px; }
 
 .nosotros-2 {
@@ -141,7 +142,8 @@
       font-size: 30px;
       font-family: 'Bebas Neue', sans-serif; }
   .nosotros-2 img {
-    width: 500px; }
+    width: 500px;
+    margin: 10px; }
 
 .trabaja-nosotros {
   margin-top: 30px;
@@ -172,7 +174,9 @@
     color: #401712;
     font-size: 30px; }
     .contacto .contacto__formulario h2 {
-      font-size: 50px; }
+      font-size: 50px;
+      color: tomato;
+      padding: 20px; }
     .contacto .contacto__formulario input {
       font-size: 30px;
       padding: 5px 15px;
@@ -182,12 +186,14 @@
       background-color: tomato;
       color: beige;
       border: 2px solid white; }
+    .contacto .contacto__formulario .boton {
+      background-color: tomato;
+      color: beige; }
   .contacto .slider-contacto {
     width: 100%;
     height: 30vh;
     background-image: url(../img/canelotis.jpg);
     background-position: center center;
-    background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover; }
   .contacto .galeria {
@@ -341,6 +347,8 @@ footer {
     flex-direction: column; } }
 
 @media screen and (max-width: 750px) {
+  .titulo {
+    background-attachment: local; }
   .mas {
     margin: 30px;
     padding-bottom: 20px; }
