--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Caprasimo&family=Oswald:wght@400;600&display=swap");
-.titulo, .produ .produ__cards, .nosotros div, .nosotros-2 div, .trabaja-nosotros, .contacto .contacto__formulario, .panes, .panes-dos, .tienda, footer .footer__logo, footer .footer__container, footer .footer__iframe iframe {
+.titulo, .produ .produ__cards, .produ .produ__cards .card .card-body, .nosotros div, .nosotros-2 div, .trabaja-nosotros, .contacto .contacto__formulario, .contacto .contenedor, .panes, .panes-dos, .tienda, .sorrentinos .sorrentinos__sorrentino .card .card-body, .ravioles .ravioles__raviol .card .card-body, .nioquis .nioquis__nioqui .card .card-body, footer .footer__logo, footer .footer__container, footer .footer__iframe iframe {
   display: flex;
   justify-content: center;
   align-items: center; }
@@ -25,10 +25,17 @@
 
 .logo-nav {
   width: 50px;
-  height: 50px; }
+  height: 50px;
+  transition: 1s; }
+
+.logo-nav:hover {
+  transform: scale(1.1); }
 
 .card {
   margin: 10px; }
+
+main {
+  background-color: beige; }
 
 /**********INDEX***********/
 /*********MAIN********/
@@ -49,6 +56,10 @@
     color: beige;
     margin-left: 20px;
     text-align: center; }
+  .titulo a {
+    transition: 1s; }
+  .titulo a:hover {
+    transform: scale(1.1); }
 
 .produ h2 {
   font-family: 'Bebas Neue', sans-serif;
@@ -62,6 +73,17 @@
   flex-wrap: wrap;
   justify-content: space-around;
   margin: 15px; }
+  .produ .produ__cards .card {
+    transition: 1s; }
+    .produ .produ__cards .card img {
+      width: 100%;
+      height: 50%; }
+    .produ .produ__cards .card .card-body {
+      flex-direction: column; }
+      .produ .produ__cards .card .card-body h5 {
+        text-decoration: underline; }
+  .produ .produ__cards .card:hover {
+    transform: scale(1.1); }
 
 .mas .mas__nosotros {
   font-family: 'Bebas Neue', sans-serif;
@@ -84,7 +106,7 @@
   grid-template-columns: 1fr 1fr 1fr;
   grid-auto-rows: 150px;
   gap: 15px;
-  background-color: white;
+  background-color: beige;
   padding: 10px; }
   .mas .mas__grid .grid-item img {
     width: 100%;
@@ -102,7 +124,8 @@
 .nosotros {
   display: flex;
   width: 100%;
-  height: 50vh; }
+  height: 50vh;
+  background-color: beige; }
   .nosotros div {
     width: 100% margin 10px;
     padding: 10px;
@@ -113,7 +136,6 @@
       text-align: center;
       color: tomato; }
     .nosotros div p {
-      margin: 10px;
       margin: 10px;
       padding: 10px;
       text-align: center;
@@ -126,6 +148,7 @@
 .nosotros-2 {
   width: 100%;
   height: 50vh;
+  background-color: beige;
   display: flex;
   flex-direction: row-reverse; }
   .nosotros-2 div {
@@ -146,6 +169,7 @@
     margin: 10px; }
 
 .trabaja-nosotros {
+  background-color: beige;
   margin-top: 30px;
   width: 100%;
   height: 80vh;
@@ -168,13 +192,12 @@
   .contacto .contacto__formulario {
     flex-direction: column;
     width: 100%;
-    height: 70vh;
+    height: 150vh;
     font-family: 'Bebas Neue', sans-serif;
     text-align: center;
-    color: #401712;
     font-size: 30px; }
     .contacto .contacto__formulario h1 {
-      font-size: 50px;
+      font-size: 40px;
       color: tomato;
       padding: 20px; }
     .contacto .contacto__formulario input {
@@ -183,34 +206,30 @@
       margin: 9px;
       transition: 1s; }
     .contacto .contacto__formulario input:hover {
-      background-color: tomato;
-      color: beige;
-      border: 2px solid white; }
+      background-color: beige;
+      color: tomato;
+      border: 2px solid tomato; }
     .contacto .contacto__formulario .boton {
       background-color: tomato;
       color: beige; }
-  .contacto .slider-contacto {
+  .contacto .contenedor {
     width: 100%;
-    height: 30vh;
-    background-image: url(../img/canelotis.jpg);
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover; }
-  .contacto .galeria {
-    display: flex;
-    align-items: center;
-    justify-content: space-around; }
-    .contacto .galeria div {
-      margin: 20px; }
-      .contacto .galeria div img {
-        width: 400px;
-        height: 400px;
-        border-radius: 10px 10px 10px;
-        object-fit: cover; }
-    .contacto .galeria .galeria__logo img {
-      width: 200px;
-      height: 200px;
-      object-fit: cover; }
+    height: 100vh; }
+    .contacto .contenedor .imagen {
+      display: flex;
+      width: 600px;
+      height: 430px; }
+      .contacto .contenedor .imagen img {
+        width: 0px;
+        flex-grow: 1;
+        object-fit: cover;
+        opacity: 0.8;
+        transition: 0.5s; }
+      .contacto .contenedor .imagen img:hover {
+        cursor: crosshair;
+        width: 300px;
+        opacity: 1;
+        filter: contrast(120%); }
 
 /*************PANES*********/
 .panes {
@@ -219,12 +238,10 @@
   height: 80vh;
   flex-direction: column; }
   .panes h1 {
-    font-family: 'Bebas Neue', sans-serif;
     font-size: 100px;
     color: beige;
     text-align: center; }
   .panes h2 {
-    font-family: 'Bebas Neue', sans-serif;
     font-size: 80px;
     color: beige;
     text-align: center; }
@@ -235,17 +252,19 @@
     display: flex;
     justify-content: space-around;
     align-items: right;
-    padding: 30px;
     flex-wrap: wrap;
     padding: 10px;
     margin: 10px; }
+    .panes-cards .panes-cards__contenedor .card {
+      transition: 1s; }
+    .panes-cards .panes-cards__contenedor .card:hover {
+      transform: scale(1.1); }
 
 .panes-dos {
   width: 100%;
   height: 80vh;
   background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../img/pizza.jpg); }
   .panes-dos h2 {
-    font-family: 'Bebas Neue', sans-serif;
     font-size: 100px;
     color: beige;
     text-align: center; }
@@ -256,11 +275,9 @@
   height: 20vh;
   flex-direction: column; }
   .tienda h1 {
-    font-family: 'Bebas Neue', sans-serif;
-    font-size: 50px; }
+    font-size: 60px; }
   .tienda h2 {
-    font-family: 'Bebas Neue', sans-serif;
-    font-size: 50px;
+    font-size: 60px;
     color: tomato; }
 
 .sorrentinos .sorrentinos__sorrentino {
@@ -268,13 +285,23 @@
   display: flex;
   justify-content: space-around;
   align-items: center; }
+  .sorrentinos .sorrentinos__sorrentino .card {
+    transition: 1s; }
+    .sorrentinos .sorrentinos__sorrentino .card img {
+      width: 100%;
+      height: 50%; }
+    .sorrentinos .sorrentinos__sorrentino .card .card-body {
+      flex-direction: column; }
+      .sorrentinos .sorrentinos__sorrentino .card .card-body h5 {
+        color: tomato; }
+  .sorrentinos .sorrentinos__sorrentino .card:hover {
+    transform: scale(1.1); }
 
 .ravioles {
   display: flex;
   flex-direction: column; }
   .ravioles h2 {
-    font-family: 'Bebas Neue', sans-serif;
-    font-size: 50px;
+    font-size: 60px;
     color: tomato;
     text-align: center;
     padding: 10px; }
@@ -283,19 +310,41 @@
     justify-content: space-around;
     padding: 10px;
     flex-wrap: wrap; }
+    .ravioles .ravioles__raviol .card {
+      transition: 1s; }
+      .ravioles .ravioles__raviol .card img {
+        width: 100%;
+        height: 60%; }
+      .ravioles .ravioles__raviol .card .card-body {
+        flex-direction: column; }
+        .ravioles .ravioles__raviol .card .card-body h5 {
+          color: tomato; }
+    .ravioles .ravioles__raviol .card:hover {
+      transform: scale(1.1); }
 
 .nioquis h3 {
-  font-family: 'Bebas Neue', sans-serif;
-  font-size: 50px;
+  font-size: 60px;
   color: tomato;
   text-align: center;
-  padding: 10px; }
+  padding: 60px; }
 
 .nioquis .nioquis__nioqui {
   display: flex;
   justify-content: space-around;
   padding: 10px;
   flex-wrap: wrap; }
+  .nioquis .nioquis__nioqui .card {
+    transition: 1s; }
+    .nioquis .nioquis__nioqui .card img {
+      width: 100%;
+      height: 60%;
+      object-fit: cover; }
+    .nioquis .nioquis__nioqui .card .card-body {
+      flex-direction: column; }
+      .nioquis .nioquis__nioqui .card .card-body h5 {
+        color: tomato; }
+  .nioquis .nioquis__nioqui .card:hover {
+    transform: scale(1.1); }
 
 footer {
   justify-content: space-around;
@@ -303,7 +352,7 @@ footer {
   display: flex;
   height: 50vh;
   width: 100%;
-  background-color: #fff1f1;
+  background-color: white;
   color: black; }
   footer .footer__logo {
     height: 100%; }
@@ -325,7 +374,10 @@ footer {
       margin: 10px; }
       footer .footer__container .footer__logos img {
         margin: 20px;
-        width: 50px; }
+        width: 50px;
+        transition: 1s; }
+      footer .footer__container .footer__logos img:hover {
+        transform: scale(2); }
   footer .footer__iframe iframe {
     width: 400px; }
 
@@ -389,6 +441,8 @@ footer {
 @media screen and (max-width: 650px) {
   .nosotros {
     height: 80vh; }
+    .nosotros div h1 {
+      padding: 20px; }
     .nosotros img {
       width: 350px;
       height: 300px; }
