--- a/scss/base/_generales.scss
+++ b/scss/base/_generales.scss
@@ -21,8 +21,17 @@
 .logo-nav{
     width: 50px;
     height: 50px;
+    transition: 1s;
+}
+.logo-nav:hover{
+    transform: scale(1.1);
+    
 }
 
 .card{
     margin: 10px;
+}
+
+main{
+    background-color: $color-secundario;
 }
