--- a/scss/components/_layout.scss
+++ b/scss/components/_layout.scss
@@ -17,25 +17,34 @@
     @extend %flex;
     h1{
         font-family: 'Bebas Neue', sans-serif;
-        font-size: 100px;
+        font-size: nth($font-size, 5);
         color: $color-secundario;
         text-align: center;
 
     }
     h2{
         font-family: 'Bebas Neue', sans-serif;
-        font-size: 40px;
+        font-size: nth($font-size, 2);
         color: $color-secundario;
         margin-left: 20px;
         text-align: center;
     }
+    a{
+        transition: 1s;
+    }
+    a:hover{
+        transform: scale(1.1);
+    }
+    
+
+
 
 }
 
 .produ{
     h2{
         font-family: 'Bebas Neue', sans-serif;
-        font-size: 40px;
+        font-size: nth($font-size, 2);
         text-align: center;
         margin: 20px;
         padding: 15px;
@@ -46,6 +55,25 @@
         flex-wrap: wrap;
         justify-content: space-around;
         margin: 15px;
+        .card{
+            transition: 1s;
+            img{
+                width: 100%;
+                height: 50%;
+            }
+            .card-body{
+                @extend %flex;
+                flex-direction: column;
+                h5{
+                    text-decoration: underline;
+                }
+            }
+
+        }
+        .card:hover{
+            transform: scale(1.1);
+            
+        }
 
     }
 }
@@ -57,14 +85,14 @@
         height: 40vh;
         h2{
             font-family: 'Bebas Neue', sans-serif;
-            font-size: 40px;
+            font-size: nth($font-size, 2);
             text-align: center;
             margin: 20px;
             padding: 15px;
         }
         p{
             text-align: center;
-            font-size: 30px;
+            font-size: nth($font-size, 1);
         }
     }
     .mas__grid{
@@ -74,7 +102,7 @@
         grid-template-columns: 1fr 1fr 1fr;
         grid-auto-rows: 150px;
         gap: 15px;
-        background-color: white;
+        background-color: $color-secundario;
         padding: 10px;
         .grid-item{
             img{
@@ -106,6 +134,7 @@
     display: flex;
     width: 100%;
     height: 50vh;
+    background-color: $color-secundario;
     div{
         width: 100%
         margin 10px;
@@ -114,13 +143,12 @@
         @extend %flex;
         h1{
             font-family: 'Bebas Neue', sans-serif;
-            font-size: 40px;
+            font-size: nth($font-size, 2);
             text-align: center;
             color: $color-terciario;
 
         }
         p{
-            margin: 10px;
             margin: 10px;
             padding: 10px;
             text-align: center;
@@ -137,6 +165,7 @@
 .nosotros-2{
     width: 100%;
     height: 50vh;
+    background-color: $color-secundario;
     
     
     display: flex;
@@ -156,7 +185,7 @@
             margin: 10px;
             padding: 10px;
             text-align: center;
-            font-size: 30px;
+            font-size: nth($font-size, 1);
             font-family: 'Bebas Neue', sans-serif;
 
         }
@@ -168,6 +197,7 @@
     
 }
 .trabaja-nosotros{
+    background-color: $color-secundario;
     margin-top: 30px;
     width: 100%;
     height: 80vh;
@@ -183,15 +213,15 @@
     
     h2{
         font-family: 'Bebas Neue', sans-serif;
-        font-size: 100px;
+        font-size: nth($font-size, 5);
         color: beige;
         text-align: center;
 
     }
     p{
         font-family: 'Bebas Neue', sans-serif;
-        font-size: 60px;
-        color: beige;
+        font-size: nth($font-size, 3);
+        color: $color-secundario;
         text-align: center;
 
     }
@@ -205,18 +235,17 @@
         @extend %flex;
         flex-direction: column;
         width: 100%;
-        height: 70vh;
+        height: 150vh;
         font-family: 'Bebas Neue', sans-serif;
         text-align: center;
-        color: #401712;
-        font-size: 30px;
+        font-size: nth($font-size, 1);
         h1{
-            font-size: 50px;
+            font-size: nth($font-size, 2);
             color: $color-terciario;
             padding: 20px;
         }
         input{
-            font-size: 30px;
+            font-size: nth($font-size, 1);
             padding: 5px 15px;
             margin: 9px;
             transition: 1s;
@@ -225,49 +254,40 @@
         }
 
         input:hover{
-            background-color: $color-terciario;
-            color: $color-secundario;
-            border: 2px solid white;
+            background-color: $color-secundario;
+            color: $color-terciario;
+            border: 2px solid $color-terciario;
         }
         .boton{
             background-color: $color-terciario;
             color: $color-secundario;
         }
     }
-    .slider-contacto{
+    .contenedor{
         width: 100%;
-        height: 30vh;
-        background-image: url(../img/canelotis.jpg);
-        background-position: center center;
-        background-repeat: no-repeat;
-        background-size: cover;
-        
-    }
-    .galeria{
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
-        div{
-            
-            margin: 20px;
+        @extend %flex;
+        height: 100vh;
+        .imagen{
+            display: flex;
+            width: 600px;
+            height: 430px;
             img{
-                width: 400px;
-                height: 400px;
-                border-radius: 10px 10px 10px;
+                width: 0px;
+                flex-grow: 1;
                 object-fit: cover;
+                opacity: 0.8;
+                transition: 0.5s;
             }
-            
-        }
-        .galeria__logo{
-            img{
-                width: 200px;
-                height: 200px;
-                object-fit: cover;
+            img:hover{
+                cursor: crosshair;
+                width: 300px;
+                opacity: 1;
+                filter: contrast(120%);
             }
         }
     }
-        
 }
+
 
 
 /*************PANES*********/
@@ -281,16 +301,15 @@
     flex-direction: column;
     
     h1{
-        font-family: 'Bebas Neue', sans-serif;
-        font-size: 100px;
-        color: beige;
+        
+        font-size: nth($font-size, 5);
+        color: $color-secundario;
         text-align: center;
 
     }
     h2{
-        font-family: 'Bebas Neue', sans-serif;
-        font-size: 80px;
-        color: beige;
+        font-size: nth($font-size, 4);
+        color: $color-secundario;
         text-align: center;
 
 
@@ -302,10 +321,17 @@
         display: flex;
     justify-content: space-around;
     align-items: right;
-    padding: 30px;
     flex-wrap: wrap;
     padding: 10px;
     margin: 10px;
+    .card{
+        transition: 1s;
+
+    }
+    .card:hover{
+        transform: scale(1.1);
+        
+    }
 
     }
 }
@@ -322,9 +348,8 @@
     @extend %bg;
     @extend %flex;
     h2{
-        font-family: 'Bebas Neue', sans-serif;
-        font-size: 100px;
-        color: beige;
+        font-size: nth($font-size, 5);
+        color: $color-secundario;
         text-align: center;
 
     }
@@ -339,15 +364,13 @@
     @extend %flex;
     flex-direction: column;
     h1{
-        font-family: 'Bebas Neue', sans-serif;
-        font-size: 50px;
+        font-size: nth($font-size, 3)
         
 
     }
     h2{
-        font-family: 'Bebas Neue', sans-serif;
-        font-size: 50px;
-        color: tomato;
+        font-size: nth($font-size, 3);
+        color: $color-terciario;
     }
 
 }
@@ -357,6 +380,26 @@
         display: flex;
         justify-content: space-around;
         align-items: center;
+        .card{
+            transition: 1s;
+            img{
+                width: 100%;
+                height: 50%;
+            }
+            .card-body{
+                @extend %flex;
+                flex-direction: column;
+                h5{
+                    color: $color-terciario;
+                }
+            }
+
+        }
+        .card:hover{
+            transform: scale(1.1);
+            
+        }
+
     }
     
     
@@ -367,9 +410,8 @@
     flex-direction: column;
     
     h2{
-        font-family: 'Bebas Neue', sans-serif;
-        font-size: 50px;
-        color: tomato;
+        font-size: nth($font-size, 3);
+        color: $color-terciario;
         text-align: center;
         padding: 10px;
         
@@ -379,18 +421,36 @@
         justify-content: space-around;
         padding: 10px;
         flex-wrap: wrap;
-        
+        .card{
+            transition: 1s;
+            img{
+                width: 100%;
+                height: 60%;
+            }
+            .card-body{
+                @extend %flex;
+                flex-direction: column;
+                h5{
+                    color: $color-terciario;
+                }
+            }
+
+        }
+        .card:hover{
+            transform: scale(1.1);
+            
+        }
+
     }
 
     }
 
     .nioquis{
         h3{
-            font-family: 'Bebas Neue', sans-serif;
-            font-size: 50px;
-            color: tomato;
+            font-size: nth($font-size, 3);
+            color: $color-terciario;
             text-align: center;
-            padding: 10px;
+            padding: 60px;
 
         }
         .nioquis__nioqui{
@@ -398,6 +458,27 @@
             justify-content: space-around;
             padding: 10px;
             flex-wrap: wrap;
+            .card{
+                transition: 1s;
+                img{
+                    width: 100%;
+                    height: 60%;
+                    object-fit: cover
+                }
+                .card-body{
+                    @extend %flex;
+                    flex-direction: column;
+                    h5{
+                        color: $color-terciario;
+                    }
+                }
+    
+            }
+            .card:hover{
+                transform: scale(1.1);
+                
+            }
+    
         }
     }
 
