--- a/scss/base/_mediaquery.scss
+++ b/scss/base/_mediaquery.scss
@@ -180,6 +180,12 @@
 
 
     footer {
+        .footer__logo{
+            img{
+                width: 100px;
+            }
+        }
+
         .footer__iframe {
             iframe {
                 display: none;
