--- a/scss/base/_generales.scss
+++ b/scss/base/_generales.scss
@@ -7,6 +7,16 @@
     font-family: 'Bebas Neue', sans-serif;                        
 }
 
+.nav-link{
+    color: $color-terciario;
+}
+header{
+    div{
+        nav{
+            background-color: $color-secundario;
+        }
+        }
+}
 
 .fixed{
     position: fixed;
@@ -18,6 +28,7 @@
 
 
 }
+
 .logo-nav{
     width: 50px;
     height: 50px;
